@@ -1,3 +1,7 @@
+2006-01-05  Steffen Pingel  <squig@users.sourceforge.net>
+
+	* Gettext Commons 0.9 released
+
 2006-01-03  Steffen Pingel  <squig@users.sourceforge.net>
 
 	* src/java/org/xnap/commons/i18n/I18nManager.java: Moved
